fix: login button visibality correction

--- a/studyBuffUI/src/NavBar/NavBar.css
+++ b/studyBuffUI/src/NavBar/NavBar.css
@@ -8,8 +8,8 @@
 
 .photo {
     margin-left: 20px;
-    height: 40px;
-    width: 45px;
+    height: 56px;
+    width: 52px;
 }
 
 .iconText{
